@@ -13,6 +13,7 @@ doc/Makefile.am -text
 doc/UserGuide -text
 examples/Makefile.am -text
 examples/directory2filelist.c -text
+examples/fixmark5b.c -text
 examples/m5bstate.c -text
 examples/m5d.c -text
 examples/m5findformats.c -text
@@ -50,3 +51,5 @@ mark5access/mark5_stream.h -text
 mark5access/mark5_stream_file.c -text
 mark5access/mark5_stream_memory.c -text
 mark5access/mark5_stream_unpacker.c -text
+mark5access/mark5bfix.c -text
+mark5access/mark5bfix.h -text
